--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
+    "firebase": "^11.6.0",
     "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "4.0.3",
     "solc": "^0.5.16",
     "truffle": "^5.11.5",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "tailwindcss": "^3.4.17"
   }
 }
