--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.8.4",
     "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
+    "express": "^4.21.2",
     "firebase": "^11.6.0",
+    "form-data": "^4.0.2",
     "gh-pages": "^3.1.0",
+    "ipfs-http-client": "^50.1.2",
     "moment": "^2.29.1",
+    "multer": "^1.4.5-lts.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
