--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@pinata/sdk": "^2.1.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "buffer": "^6.0.3",
     "crypto-js": "^4.0.0",
     "firebase": "^11.6.0",
     "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
